# childrens-news-app

./: .gitignore  Children blueprint.docx  Children.docx  README.md  debug_main_page.html  pyproject.toml  requirements.txt  test_firecrawl_results.json
data/: cleaned_articles.json  processed_articles.json  raw_articles.json
src/: .gitignore  config.py  data_pipeline.py  database.py  extractors.py  processors.py  test_firecrawl.py  test_gemini.py  test_gemini_api  test_ollama.py
src/childrens_news_app.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
