[project]
name = "childrens-news-app"
version = "0.1.0"
description = "ETL pipeline for a Children's News App that delivers safe, age-appropriate news for Indian children aged 5–15."
authors = [{ name = "Dilip", email = "you@example.com" }]  # Optional: update if needed
license = { text = "MIT" }  # Or your preferred license
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "beautifulsoup4==4.14.2",
    "certifi==2025.10.5",
    "charset-normalizer==3.4.3",
    "feedparser==6.0.12",
    "idna==3.10",
    "numpy==2.3.3",
    "pandas==2.3.3",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "requests==2.32.5",
    "lxml==4.9.3",
    "sgmllib3k==1.0.0",
    "six==1.17.0",
    "soupsieve==2.8",
    "typing_extensions==4.15.0",
    "tzdata==2025.2",
    "urllib3==2.5.0",
    "firecrawl-py==0.0.16",
    "python-dotenv==1.0.0",
    "litellm==1.49.3",
    "google-generativeai==0.8.3",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"